[package]
name = "abyss-snaps"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31.3", features = ["user"] }
btrfs-uapi = "0.13.0"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
crc32fast = "1.5.0"

